sf-hrms/force-app/main/default/objects/Attendance__c/fields/Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Check_Out__c</fullName>
    <label>Check Out</label>
    <type>DateTime</type>
</CustomField>