sf-hrms/force-app/main/default/objects/Attendance__c/fields/Gross_Hours__c.field-meta.xml
<CustomField>
    <fullName>Gross_Hours__c</fullName>
    <label>Gross Hours</label>
    <description>Elapsed time from the first check-in to the last punch of the day, breaks included. On a finished day that last punch is the check-out, so this is time on premises. Derived by AttendanceRollupService; do not edit by hand.</description>
    <inlineHelpText>First clock-in to the last punch of the day, including breaks.</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>