sf-hrms/force-app/main/default/objects/Attendance__c/fields/Late_By_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Late_By_Minutes__c</fullName>
    <label>Late By Minutes</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>