sf-hrms/force-app/main/default/objects/Attendance__c/fields/Penalty__c.field-meta.xml
<CustomField>
    <fullName>Penalty__c</fullName>
    <label>Penalty</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set by AttendanceRollupService when the day breaches attendance policy: arriving after the penalty cutoff, or working less than a full shift. Cleared automatically when punches change and the day no longer breaches.</description>
</CustomField>