sf-hrms/force-app/main/default/objects/Attendance__c/fields/Penalty_Reason__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Reason__c</fullName>
    <label>Penalty Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>Why the day was penalised, for example a late arrival or a short shift. Derived, not entered by hand.</description>
</CustomField>