sf-hrms/force-app/main/default/objects/Attendance__c/fields/Shift__c.field-meta.xml
<CustomField><fullName>Shift__c</fullName><label>Shift</label><type>Lookup</type><referenceTo>Shift__c</referenceTo><relationshipLabel>Attendance Records</relationshipLabel><relationshipName>Attendance_Records</relationshipName></CustomField>