sf-hrms/force-app/main/default/objects/Attendance__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <label>Effective Hours</label>
    <description>Hours actually worked: the sum of each clock-in to clock-out stretch, breaks excluded. This is the figure the attendance policy measures against HRMS_Penalty_Minimum_Hours. Derived by AttendanceRollupService; do not edit by hand.</description>
    <inlineHelpText>Hours worked with breaks excluded.</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>