sf-hrms/force-app/main/default/objects/Attendance__c/listViews/All_Attendance.listView-meta.xml
<ListView>
    <fullName>All_Attendance</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Date__c</columns>
    <columns>Check_In__c</columns>
    <columns>Check_Out__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>Late_By_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Attendance</label>
</ListView>